# 42_PythonPiscineDataScience

./: menu.py  pyproject.toml
python0/ex00/: Hello.py
python0/ex01/: format_ft_time.py
python0/ex03/: NULL_not_found.py
python0/ex04/: whatis.py
python0/ex05/: building.py
python0/ex06/: filterstring.py  ft_filter.py
python0/ex07/: sos.py
python0/ex08/: ft_tqdm.py
python0/ex09/: README.md  pyproject.toml  test_ex09.py
python0/ex09/src/ft_package_smuravye/: __init__.py  building.py  count.py  filterstring.py  ft_filter.py  loading.py  morse.py
python0/test_ex09/: test_ex09.py
