[project]
name = "pythonpiscine42"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["flake8>=7.3.0", "ft-package-smuravye", "tqdm>=4.67.3"]

[tool.uv.workspace]
members = ["python0/ex09"]

[tool.uv.sources]
ft-package-smuravye = { workspace = true }
